Adjusting the width so as to prevent overflow on horizontal direction

--- a/assets/stylesheets/_base.scss
+++ b/assets/stylesheets/_base.scss
@@ -1,4 +1,5 @@
 /* Layout widths */
+$mobile-layout-width: 23.4375rem;
 $tablet-layout-width: 48rem;
 $desktop-layout-width: 80rem;
 
